--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/assets/MocionLogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- <script src="https://unpkg.com/react-scan/dist/auto.global.js"></script> -->
     <title>App de asistentes</title>
   </head>
   <body>
